review-fix: Prevent text clipping on Linux

--- a/packages/fether-react/src/assets/sass/components/_account.scss
+++ b/packages/fether-react/src/assets/sass/components/_account.scss
@@ -49,6 +49,7 @@
      * where it is used in the AccountList component
      */
     &.-header {
+      font-size: 0.95rem;
       margin-top: 0.2rem;
       padding-bottom: 0.3rem;
     }
